bugs fixed of loan

--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
@@ -456,12 +456,12 @@
                                 <tr>
                                     <td>
                                         <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                                            <input matInput formControlName="BankName"/>
+                                            <input matInput max="50" formControlName="BankName"/>
                                         </mat-form-field>
                                     </td>
                                     <td>
                                         <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                                            <input matInput appNumberOnly formControlName="AmountToPaid"/>
+                                            <input matInput max="7" appNumberOnly formControlName="AmountToPaid"/>
                                         </mat-form-field>
                                     </td>
                                     <td>
@@ -559,7 +559,7 @@
                                     </td>
                                     <td>
                                         <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                                            <input matInput formControlName="BankName"/>
+                                            <input matInput max="50" formControlName="BankName"/>
                                         </mat-form-field>
                                     </td>
                                     <td>
