--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
@@ -161,7 +161,7 @@
                                     <mat-form-field class=" mat-form-field-fluid w-full"
                                                     appearance="outline">
                                         <mat-label class="customMatLabel">Page No</mat-label>
-                                        <input matInput formControlName="PageNumber" id="page_{{i}}">
+                                        <input matInput formControlName="PageNumber" id="page_{{i}}" appNumberOnly>
                                     </mat-form-field>
                                 </div>
                             </div>
@@ -174,7 +174,7 @@
                                                     appearance="outline">
                                         <mat-label class="customMatLabel">Description</mat-label>
                                         <input matInput formControlName="DescriptionTab"
-                                               id="description_{{i}}">
+                                               id="description_{{i}}" appAlphaNumericField>
                                     </mat-form-field>
                                 </div>
                             </div>
