--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
@@ -83,9 +83,9 @@
                                         </mat-form-field>
                                     </td>
                                     <td>
-                                        <mat-form-field class="mat-form-field-fluid" maxlength="13"
+                                        <mat-form-field class="mat-form-field-fluid"
                                                         appearance="outline">
-                                            <input matInput appNumberOnly formControlName="NetValue"/>
+                                            <input matInput appNumberOnly formControlName="NetValue" maxlength="13"/>
                                         </mat-form-field>
                                     </td>
                                     <td><span (click)="onSavePersonalSuretiesForm()">Save</span> | <span
