--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -575,6 +575,9 @@ img{
   .mat-sort-header-content{
     color: white;
   }
+  .bg-gray-50{
+    background-color: #f8fafc;
+  }
 
   .row > *{
     padding: 0%;
