--- a/src/app/modules/customer/eligibility-request/eligibility-request.component.html
+++ b/src/app/modules/customer/eligibility-request/eligibility-request.component.html
@@ -142,7 +142,7 @@
                     <ng-container matColumnDef="Actions">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Actions</mat-header-cell>
                         <mat-cell *matCellDef="let eligibilityRequest" style="flex-wrap: wrap">
-                            <a [href]="eligibilityRequest.NDCFilePath" mat-icon-button color="accent"
+                            <a [href]="eligibilityRequest.NdcFilePath" mat-icon-button color="accent"
                                aria-label="View Files">
                                 <mat-icon>description</mat-icon>
                             </a>
