--- a/src/app/modules/user-management/eligibility-logs/eligibility-logs.component.html
+++ b/src/app/modules/user-management/eligibility-logs/eligibility-logs.component.html
@@ -40,7 +40,7 @@
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                         <input type="button" mat-raised-button color="primary"
                                class=" mat-raised-button mat-button-base mat-primary searchLCBtn mt-2 bg-gray-500"
-                               value="Find" (click)="find()"/>
+                               value="Find" (click)="find(true)"/>
 
                     </div>
                 </div>
