--- a/src/app/modules/loan/cl-appraisal-of-proposed-investment/cl-appraisal-of-proposed-investment.component.html
+++ b/src/app/modules/loan/cl-appraisal-of-proposed-investment/cl-appraisal-of-proposed-investment.component.html
@@ -160,13 +160,12 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="form-group kt-form__group row">
+                 <div class="form-group kt-form__group row">
                     <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Type</mat-label>
                             <mat-select formControlName="Type">
-                                <mat-option *ngFor="let proCrop of selectedProposedCropType" [value]="proCrop.Id">
+                                <mat-option *ngFor="let proCrop of selectedProposedCropType" [value]="proCrop.Value">
                                     {{proCrop.Name }}
                                 </mat-option>
                             </mat-select>
@@ -240,7 +239,7 @@
                                 <tbody>
                                 <tr *ngFor="let production of productionArray; let i = index;">
                                     <td>
-                                        {{appraisalType(production.AppraisalType)}}
+                                        {{production.AppraisalTypeName}}
                                     </td>
                                     <td>
                                         {{production.CropType}}
