--- a/src/app/modules/user-management/eligibility-logs/eligibility-logs.component.html
+++ b/src/app/modules/user-management/eligibility-logs/eligibility-logs.component.html
@@ -49,17 +49,18 @@
     </div>
 
 
-    <div class="form-group kt-form__group row mt-4 ">
-        <div class="mat-table__wrapper mat-elevation-z8">
+    <div class="flex flex-auto overflow-y-scroll border shadow-xs rounded-sm bg-gray-50 "
+         style="flex-direction: column;">
+        <div class="example-table-container">
             <!--[style.height]="gridHeight"-->
-            <mat-table class="lmat-elevation-z8"
-                       #table
-                       [dataSource]="dataSource"
-                       matSort
-                       #sort1="matSort"
-                       matSortActive="id"
-                       matSortDirection="asc"
-                       matSortDisableClear>
+            <mat-table
+                #table
+                [dataSource]="dataSource"
+                matSort
+                #sort1="matSort"
+                matSortActive="id"
+                matSortDirection="asc"
+                matSortDisableClear>
                 <ng-container matColumnDef="ZoneName">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Zone Name</mat-header-cell>
                     <mat-cell *matCellDef="let EligibilityLog">{{EligibilityLog.ZoneName}}</mat-cell>
@@ -77,9 +78,9 @@
                     <mat-cell *matCellDef="let EligibilityLog">{{EligibilityLog.Cnic}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="BMVStatus">
+                <ng-container matColumnDef="BMVSStatus">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>BMVS Status</mat-header-cell>
-                    <mat-cell *matCellDef="let EligibilityLog">{{EligibilityLog.BMVStatus}}</mat-cell>
+                    <mat-cell *matCellDef="let EligibilityLog">{{EligibilityLog.BMVSStatus}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="NIVSStatus">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>NIVS Status</mat-header-cell>
@@ -107,22 +108,23 @@
 
             </mat-table>
 
-            <div class="mat-select" style="padding:5px;">
-                Items per page:
-                <mat-select display="inline" [(value)]="items_per_page" (valueChange)="paginate(1,$event)"
-                            style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
-                    <mat-option [value]="5">5</mat-option>
-                    <mat-option [value]="10">10</mat-option>
-                    <mat-option [value]="25">25</mat-option>
-                    <mat-option [value]="50">50</mat-option>
-                </mat-select>
-                <button (click)="paginate(1)">First</button>
-                <pagination-controls display="inline" (pageChange)="paginate($event)"
-                                     style="display: inline-block;"></pagination-controls>
-                <button (click)="paginate(MathCeil(TotalRecords/items_per_page))">Last</button>
-                <p style="float:right;">Total <b>{{TotalRecords}}</b> items</p>
 
-            </div>
+        </div>
+        <div class="mat-select" style="padding:5px;">
+            Items per page:
+            <mat-select display="inline" [(value)]="items_per_page" (valueChange)="paginate(1,$event)"
+                        style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+                <mat-option [value]="5">5</mat-option>
+                <mat-option [value]="10">10</mat-option>
+                <mat-option [value]="25">25</mat-option>
+                <mat-option [value]="50">50</mat-option>
+            </mat-select>
+            <button (click)="paginate(1)">First</button>
+            <pagination-controls display="inline" (pageChange)="paginate($event)"
+                                 style="display: inline-block;"></pagination-controls>
+            <button (click)="paginate(MathCeil(TotalRecords/items_per_page))">Last</button>
+            <p style="float:right;">Total <b>{{TotalRecords}}</b> items</p>
+
         </div>
     </div>
 </div>
