--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
@@ -109,7 +109,7 @@
                     <mat-label class="customMatLabel">No of Files to Upload<strong class="matMandatory">*</strong>
                     </mat-label>
                     <input matInput formControlName="NoOfFilesToUpload"
-                           (change)="changeFilesQuantity()" appNumberOnly>
+                           (keyup)="changeFilesQuantity()" appNumberOnly>
                     <mat-error *ngIf="hasError('NoOfFilesToUpload', 'required')">No Of Files To Upload
                         <strong>required</strong></mat-error>
                 </mat-form-field>
@@ -161,7 +161,7 @@
                                     <mat-form-field class=" mat-form-field-fluid w-full"
                                                     appearance="outline">
                                         <mat-label class="customMatLabel">Page No</mat-label>
-                                        <input matInput formControlName="PageNumber" id="page_{{i}}" appNumberOnly>
+                                        <input matInput formControlName="PageNumber" id="page_{{i}}">
                                     </mat-form-field>
                                 </div>
                             </div>
