--- a/src/app/modules/customer/eligibility-request/eligibility-request.component.html
+++ b/src/app/modules/customer/eligibility-request/eligibility-request.component.html
@@ -142,11 +142,12 @@
                     <ng-container matColumnDef="Actions">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Actions</mat-header-cell>
                         <mat-cell *matCellDef="let eligibilityRequest" style="flex-wrap: wrap">
-                            <a [href]="eligibilityRequest.NdcFilePath" mat-icon-button color="accent"
+                            <a [href]="eligibilityRequest.NdcFilePath" target="_blank" mat-icon-button color="accent"
+                               matTooltip="View NDC"
                                aria-label="View Files">
                                 <mat-icon>description</mat-icon>
                             </a>
-                            <button mat-icon-button color="accent" aria-label="view NDC"
+                            <button mat-icon-button color="accent" matTooltip="View Reciepts"
                                     (click)="getImagesData(eligibilityRequest.Id)">
                                 <mat-icon>visibility</mat-icon>
                             </button>
