--- a/src/app/modules/user-management/eligibility-logs/eligibility-logs.component.html
+++ b/src/app/modules/user-management/eligibility-logs/eligibility-logs.component.html
@@ -65,6 +65,10 @@
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Zone Name</mat-header-cell>
                     <mat-cell *matCellDef="let EligibilityLog">{{EligibilityLog.ZoneName}}</mat-cell>
                 </ng-container>
+                <ng-container matColumnDef="BranchWorkingDate">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Branch Working Date</mat-header-cell>
+                    <mat-cell *matCellDef="let EligibilityLog">{{EligibilityLog.BranchWorkingDate}}</mat-cell>
+                </ng-container>
                 <ng-container matColumnDef="BranchName">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Branch Name</mat-header-cell>
                     <mat-cell *matCellDef="let EligibilityLog">{{EligibilityLog.BranchName}}</mat-cell>
@@ -77,29 +81,20 @@
                     <mat-header-cell *matHeaderCellDef mat-sort-header>CNIC</mat-header-cell>
                     <mat-cell *matCellDef="let EligibilityLog">{{EligibilityLog.Cnic}}</mat-cell>
                 </ng-container>
-
-                <ng-container matColumnDef="BMVSStatus">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>BMVS Status</mat-header-cell>
-                    <mat-cell *matCellDef="let EligibilityLog">{{EligibilityLog.BMVSStatus}}</mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="NIVSStatus">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>NIVS Status</mat-header-cell>
-                    <mat-cell *matCellDef="let EligibilityLog">{{EligibilityLog.NIVSStatus}}</mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="NDCStatus">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>NDC Status</mat-header-cell>
-                    <mat-cell *matCellDef="let EligibilityLog">{{EligibilityLog.NDCStatus}}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="CWRStatus">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>CWR Status</mat-header-cell>
-                    <mat-cell
-                        *matCellDef="let EligibilityLog">{{EligibilityLog.CWRStatus}}</mat-cell>
-                </ng-container>
-
                 <ng-container matColumnDef="CreatedDate">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Created Date</mat-header-cell>
-                    <mat-cell *matCellDef="let EligibilityLog">{{EligibilityLog.CreatedDate | date}}</mat-cell>
+                    <mat-cell *matCellDef="let EligibilityLog">{{EligibilityLog.CreatedDate}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="Actions">
+                    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                    <mat-cell *matCellDef="let EligibilityLog">
+                        <button mat-icon-button (click)="viewDetail(EligibilityLog)">
+                            <mat-icon>visibility</mat-icon>
+                        </button>
+                        <button mat-icon-button (click)="showLocation(EligibilityLog)">
+                            <mat-icon>location_on</mat-icon>
+                        </button>
+                    </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;"
                                 class="table-header-background"></mat-header-row>
