--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
@@ -165,7 +165,7 @@
                                     <mat-form-field class=" mat-form-field-fluid w-full"
                                                     appearance="outline">
                                         <mat-label class="customMatLabel">Page No</mat-label>
-                                        <input matInput formControlName="PageNumber" id="page_{{i}}" >
+                                        <input matInput formControlName="PageNumber" type="number" id="page_{{i}}" >
 <!--                                        <mat-error *ngIf="hasError('PageNumber', 'pattern')">Please add Valid Number-->
 <!--                                            <strong>required</strong></mat-error>-->
                                     </mat-form-field>
