--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
@@ -16,15 +16,15 @@
                                 <tr class="table-header-background">
                                     <th>CNIC</th>
                                     <th>Name</th>
-                                    <th>Parentge</th>
+                                    <th>Percentage</th>
                                     <th>Address</th>
                                     <th>Phone</th>
                                     <th>Account No</th>
                                     <th>Source Of Income</th>
                                     <th>Annual Income</th>
                                     <th>Asset Value</th>
-                                    <th>persent_dues</th>
-                                    <th>net_value</th>
+                                    <th>Present dues</th>
+                                    <th>Net Value</th>
                                     <th></th>
                                 </tr>
                                 </thead>
@@ -629,7 +629,7 @@
                                                 <th>Date Loan Availed</th>
                                                 <th>Outstanding Amount</th>
                                                 <th>Due Date</th>
-                                                <th>STATUS</th>
+                                                <th>Status</th>
                                                 <th>Facility</th>
 
                                                 <th></th>
