--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -134,6 +134,22 @@
             >Payment Behavior</p></mat-card>
         </div>
 
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="disbursement()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
+            >Disbursement Performance Report</p></mat-card>
+        </div>
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="disbursementPurposeWise()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
+            >Disbursement Performance (Purpose-Wise) Report</p></mat-card>
+        </div>
+
     </div>
+
+<!--    <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">-->
+
+<!--        -->
+
+<!--    </div>-->
 
 </div>
