--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -43,7 +43,7 @@
 
                         </div>
                         <div class="form-group kt-form__group row pl-0 p-1 py-2 mx-0  mt-10" *ngIf="NDCPerform">
-                            <div class="col-lg-6 shadow-sm ">
+                            <div class="col-lg-6 shadow-md ">
                                 <div class="row p-4">
                                     <div class="col-lg-6 kt-margin-bottom-20-mobile">
                                         <h5 class="text-green">NDC</h5>
