--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -332,24 +332,24 @@
                         <div class="kt-form__actions kt-form__actions--solid">
                             <div class="row text-right">
                                 <div class="col-lg-12">
-                                    <button (click)="SubmitNdc()" *ngIf="NdcSubmit" type="button"
-                                            class="btn btn-primary bg-green "
+                                    <button (click)="SubmitNdc()" *ngIf="NdcSubmit"
+                                            class="btn  bg-green "
                                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
                                     >
-                                    <mat-icon class="mr-2">navigate_next</mat-icon>   Next
+                                       Next
                                     </button>
                                     <button (click)="saveBiomatricdata()" *ngIf="BioMetricCapture"
                                             type="button" class="btn btn-primary bg-green kt-login__btn-primary"
                                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
                                     >
-                                    <mat-icon class="mr-2">navigate_next</mat-icon>   Save & Next
+                                       Save & Next
                                     </button>
                                     <button (click)="submitCWR()"
                                             *ngIf="BiometricCredentials" type="button"
                                             class="btn btn-primary  kt-login__btn-primary bg-green"
                                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
                                     >
-                                    <mat-icon class="mr-2">navigate_next</mat-icon>   Next
+                                     Next
                                     </button>
                                     <button type="button"
                                             (click)="refreshEcib()"
@@ -357,14 +357,14 @@
                                             class="btn btn-primary kt-login__btn-primary bg-green"
                                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
                                     >
-                                    <mat-icon class="mr-2">refresh</mat-icon>   Refresh
+                                      Refresh
                                     </button>
                                     <button (click)="NextOpenCreateCustomer()" *ngIf="ECIBPerformSuccess"
                                             type="button"
                                             class="btn btn-primary kt-login__btn-primary bg-green"
                                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
                                     >
-                                    <mat-icon class="mr-2">navigate_next</mat-icon>   Next
+                                   Next
                                     </button>
                                 </div>
                             </div>
