--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -42,7 +42,7 @@
 
 
                         </div>
-                        <div class="form-group kt-form__group row pl-0 p-1 py-2 mx-0  mt-10" *ngIf="NDCPerform">
+                        <div class="form-group kt-form__group row pl-0 p-1 py-2 mx-0  mt-4" *ngIf="NDCPerform">
                             <div class="col-lg-6 shadow-md ">
                                 <div class="row p-4">
                                     <div class="col-lg-6 kt-margin-bottom-20-mobile">
@@ -52,7 +52,7 @@
                                     <div class="col-lg-6 text-right kt-margin-bottom-20-mobile self-center">
                                         <a *ngIf="NDCLinkView" href="{{Customer.NDCPDFLink}}" target="_blank" mat-flat-button
                                            color="primary">
-                                            <mat-icon class="text-green" title="view">insert_drive_file</mat-icon>
+                                            <mat-icon class="text-green mr-2" title="view">insert_drive_file</mat-icon>
                                             View PDF
                                         </a>
                                     </div>
