--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -328,7 +328,7 @@
 
               </div>-->
                     <!--Actions Fields-->
-                    <div class="kt-portlet__foot kt-portlet__foot--fit kt-portlet__no-border px-2 mt-6">
+                    <div class="kt-portlet__foot kt-portlet__foot--fit kt-portlet__no-border mt-2">
                         <div class="kt-form__actions kt-form__actions--solid">
                             <div class="row">
                                 <div class="col-lg-12">
