--- a/src/app/modules/reports/disbursement-performance-purpose-wise/disbursement-performance-purpose-wise.component.html
+++ b/src/app/modules/reports/disbursement-performance-purpose-wise/disbursement-performance-purpose-wise.component.html
@@ -36,7 +36,7 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">GL Code</mat-label>
-                                        <input matInput placeholder="Enter LC NO" formControlName="GLCode" maxlength="30" autocomplete="off" appNumberOnly/>
+                                        <input matInput placeholder="Enter GL Code" formControlName="GLCode" maxlength="30" autocomplete="off" appNumberOnly/>
                                     </mat-form-field>
                                 </div>
 
